2006-02-11  Michael Wybrow  <mjwybrow@users.sourceforge.net>

	* src/sp-conn-end-pair.cpp, src/conn-avoid-ref.cpp:
	  Fix two bugs from my commit yesterday.

2006-02-10  Michael Wybrow  <mjwybrow@users.sourceforge.net>

	* src/sp-conn-end-pair.cpp, src/sp-conn-end-pair.h,
	  src/conn-avoid-ref.cpp, src/conn-avoid-ref.h,
	  src/libavoid/connector.cpp, src/libavoid/connector.h,
	  src/libavoid/visibility.cpp:

	Add some code to allow querying of items and connectors to find
	out what is attached to them.  This will allow graph layout
	algorithms (currently being worked on by Tim Dwyer) to determine 
	a graph structure from the diagram.

2006-02-07  MenTaLguY  <mental@rydia.net>

	* src/widgets/icon.cpp: get rid of icon prerender time messages

2006-02-07  MenTaLguY  <mental@rydia.net>

	* src/debug/gc-heap.h, src/debug/logger.cpp, src/debug/sysv-heap.h,
	  src/jabber_whiteboard/deserializer.cpp, src/sp-object.cpp,
	  src/util/share.h, src/xml/simple-node.cpp:

      share_static -> share_static_string

2006-02-07  Michael Wybrow  <mjwybrow@users.sourceforge.net>

	* src/jabber_whiteboard/message-utilities.h,
	  src/jabber_whiteboard/serializer.cpp,
	  src/jabber_whiteboard/deserializer.cpp,
	  src/jabber_whiteboard/message-utilities.cpp,
	  src/ui/dialog/whiteboard-connect.cpp:
	
	Some fixes to allow the codebase to compile with Inkboard support
	after the recent Util::shared_ptr<> and Dialog::present() changes.

2006-02-05  Marco Scholten  <mscholtn@xs4all.nl>

	* src/verbs.cpp: updated to make double clicking a tool button
      open the new preferences dialog.
	* src/ui/dialog/inkscape-preferences.cpp: updated to enable opening
      the dialog on the correct page.
	* src/ui/dialog/dialog.cpp: added virtual void present() so that
      InkscapePreferences::present() will be called from 
      DialogManager::showDialog()

2006-02-05  MenTaLguY  <mental@rydia.net>

	* src/debug/event.h, src/debug/gc-heap.h, src/debug/heap.h,